<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <com.buu.app.travel.MyView.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </com.buu.app.travel.MyView.TitleLayout>

    <ScrollView
        android:id="@+id/choice_theme_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/style_login_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/style_login_zong"
                android:gravity="center"
                android:text="@string/Choice_Style"
                android:textSize="20dp" />

            <GridLayout
                android:id="@+id/theme_choice_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:columnCount="3"
                android:rowCount="4">

                <TextView
                    android:id="@+id/choice_mingsheng"
                    android:layout_width="80dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_theme_border"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/historical" />

                <TextView
                    android:id="@+id/choice_guji"
                    android:layout_width="80dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_theme_border"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/a_place_of_interest"
                     />

                <TextView
                    android:id="@+id/choice_gouwu"
                    android:layout_width="80dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_theme_border"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/shopping"
                    android:textIsSelectable="false" />

                <TextView
                    android:id="@+id/fengjing"
                    android:layout_width="80dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_theme_border"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/scenery" />

                <TextView
                    android:id="@+id/choice_zongjiao"
                    android:layout_width="80dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_theme_border"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/religion" />

                <TextView
                    android:id="@+id/choice_bowuguan"
                    android:layout_width="80dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_theme_border"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/museum" />

                <TextView
                    android:id="@+id/choice_dongwu"
                    android:layout_width="80dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_theme_border"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/animals" />

                <TextView
                    android:id="@+id/choice_oushi"
                    android:layout_width="80dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_theme_border"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/European_style" />

                <TextView
                    android:id="@+id/choice_wenhua"
                    android:layout_width="80dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_theme_border"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/culture" />

                <TextView
                    android:id="@+id/choice_meishi"
                    android:layout_width="80dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_theme_border"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/foods" />


                <TextView
                    android:id="@+id/theme_choice_theme_self"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_theme_border"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/self_making"
                    android:textSize="15dp" />
            </GridLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/theme_choice_theme_btn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/comment_jingqu"
                    android:button="@null"
                    android:gravity="center"
                    android:checked="true"
                    android:text="@string/tourist_recommendation"
                    android:textSize="20dp"
                    android:textColor="@drawable/text_style"
                    />

                <RadioButton
                    android:id="@+id/theme_choic_theme_btn1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/comment_jingqu"
                    android:gravity="center"
                    android:button="@null"
                    android:text="@string/tourist_comment"
                    android:textSize="20dp"
                    android:textColor="@drawable/text_style"
                    />

            </RadioGroup>

            <FrameLayout
                android:id="@+id/theme_choice_theme_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >

                <android.support.v7.widget.RecyclerView
                    android:descendantFocusability="blocksDescendants"
                    android:id="@+id/theme_choice_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"></android.support.v7.widget.RecyclerView>



                <ListView
                        android:id="@+id/theme_choice_theme_listview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                    android:background="@drawable/thememaking_border2"
                        ></ListView>

            </FrameLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
